--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.10.0",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "17.0.2",
+    "react-h5-audio-player": "^3.7.1",
+    "react-icons": "^4.2.0",
     "sass": "^1.39.0"
   },
   "devDependencies": {
